<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    tools:context=".ui.dashboard.trends.TrendsFragment">

    <com.safey.lungmonitoring.customviews.CustomTextViewCircularStd
        android:id="@+id/forced_expi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/forced_expi"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/_12sdp"
        android:layout_height="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="@+id/forced_expi"
        app:layout_constraintStart_toEndOf="@+id/forced_expi"
        app:layout_constraintTop_toTopOf="@+id/forced_expi"
        app:srcCompat="@drawable/ic_down_black"
        />

    <com.safey.lungmonitoring.customviews.CustomTextViewCircularStd
        android:id="@+id/fvc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal"
        android:padding="@dimen/_8sdp"
        android:text="@string/fvc"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toStartOf="@+id/fvcArrow"
        app:layout_constraintTop_toTopOf="@+id/forced_expi" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/fvcArrow"
        android:layout_width="@dimen/_12sdp"
        android:layout_height="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="@+id/fvc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fvc"
        app:srcCompat="@drawable/ic_down_black"
       />

    <View
        android:id="@+id/viewLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="#EEF0FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forced_expi" />

    <com.safey.lungmonitoring.customviews.CustomTextViewCircularStd
        android:id="@+id/week"
        style="@style/label_12ssp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:gravity="center_horizontal|top"
        android:text="@string/week"
        android:padding="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="@+id/amonth"
        app:layout_constraintEnd_toStartOf="@+id/amonth"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewLine" />

    <com.safey.lungmonitoring.customviews.CustomTextViewCircularStd
        android:id="@+id/amonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/btn_blue_round"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/_1_month"
       style="@style/label_12ssp"
        android:padding="@dimen/_8sdp"
        app:layout_constraintEnd_toStartOf="@+id/six_months"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/week"
        app:layout_constraintTop_toBottomOf="@+id/viewLine" />

    <com.safey.lungmonitoring.customviews.CustomTextViewCircularStd
        android:id="@+id/six_months"
        style="@style/label_12ssp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:gravity="center"

        android:text="@string/_6_months"
        app:layout_constraintBottom_toBottomOf="@+id/amonth"
        app:layout_constraintEnd_toStartOf="@+id/ayear"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/amonth"
        app:layout_constraintTop_toBottomOf="@+id/viewLine" />

    <com.safey.lungmonitoring.customviews.CustomTextViewCircularStd
        android:id="@+id/ayear"
        style="@style/label_12ssp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:gravity="center_horizontal|top"
        android:text="@string/_1_year"
        app:layout_constraintBottom_toBottomOf="@+id/amonth"
        app:layout_constraintEnd_toStartOf="@+id/all"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/six_months"
        app:layout_constraintTop_toBottomOf="@+id/viewLine" />

    <com.safey.lungmonitoring.customviews.CustomTextViewCircularStd
        android:id="@+id/all"
        style="@style/label_12ssp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:gravity="center_horizontal|top"
        android:text="@string/all"
        android:padding="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="@+id/amonth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ayear"
        app:layout_constraintTop_toBottomOf="@+id/viewLine" />

    <info.safey.graph.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="0dp"
        android:layout_height="@dimen/_150sdp"
        android:layout_margin="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/all" />

    <com.safey.lungmonitoring.customviews.CustomTextViewCircularStd
        android:id="@+id/lbl_best_session"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:text="@string/best_session"
        android:theme="@style/label_12ssp"
        app:layout_constraintStart_toStartOf="@+id/lineChart"
        app:layout_constraintTop_toBottomOf="@+id/lineChart" />

    <com.safey.lungmonitoring.customviews.CustomTextViewCircularStd
        android:id="@+id/lblDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_alignParentTop="true"
        app:layout_constraintStart_toStartOf="@+id/lbl_best_session"
        app:layout_constraintTop_toBottomOf="@+id/lbl_best_session"
        android:text="17 Dec 2021 04:49 PM"
        android:theme="@style/label_11ssp"
        android:gravity="top"
        android:alpha="0.5"
        />
    <View
        android:id="@+id/viewline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblDate"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#EEF0FF"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewBestTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:itemCount="3"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="@id/viewline"
        app:layout_constraintEnd_toEndOf="@id/viewline"
        app:layout_constraintTop_toBottomOf="@+id/viewline"
        tools:listitem="@layout/row_best_test_result"/>

</androidx.constraintlayout.widget.ConstraintLayout>