<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="@dimen/_24sdp"
    android:layout_height="match_parent">


    <com.safey.lungmonitoring.customviews.CustomTextViewCircularStd
        android:id="@+id/appCompatTextView"
        style="@style/label_14ssp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:gravity="center"
        android:text="@string/connecting_to_safey_device"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/permission_image" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/permission_image"
        android:layout_width="match_parent"
        android:layout_height="357dp"
        android:layout_marginBottom="@dimen/_24sdp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.741"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_bluetooth_permission" />

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/spin_kit"
        style="@style/SpinKitView.Large.FadingCircle"
        android:layout_width="@dimen/_28sdp"
        android:layout_height="@dimen/_28sdp"
        android:layout_gravity="center"
        app:SpinKit_Color="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/safey_permission_bluetooth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

    <com.safey.lungmonitoring.customviews.CustomTextViewCircularStd
        android:id="@+id/safey_permission_bluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:layout_marginBottom="@dimen/_16sdp"
        android:text="@string/safey_permission_bluetooth"
        android:textAppearance="@style/label_14ssp"
        app:layout_constraintBottom_toTopOf="@+id/btnDeny"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.safey.lungmonitoring.customviews.CustomButtonCircularStd
        android:id="@+id/btnDeny"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:background="@drawable/ic_button_white_round"
        android:text="@string/deny"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="@+id/btnAllow"
        app:layout_constraintEnd_toStartOf="@+id/btnAllow"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.safey.lungmonitoring.customviews.CustomButtonCircularStd
        android:id="@+id/btnAllow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:background="@drawable/ic_btn_pink_round"
        android:text="@string/allow"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnDeny"
         />
</androidx.constraintlayout.widget.ConstraintLayout>