<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ic_white_top_round"
    android:padding="@dimen/_24sdp">

    <com.safey.lungmonitoring.customviews.CustomTextViewCircularStd
        android:id="@+id/txtTitle"
        android:layout_width="119dp"
        android:layout_height="24dp"

        android:layout_marginLeft="24dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="678dp"
        android:text="@string/confirm_changes"

        android:lineSpacingExtra="7sp"
        android:translationY="-3.53sp"
        android:gravity="top"
        />

    <com.safey.lungmonitoring.customviews.CustomTextViewCircularStd
        android:id="@+id/safey_permission_bluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/_16sdp"
        android:gravity="top"
        android:text="@string/delete_this_trial"
        android:textAppearance="@style/label_14ssp"
        app:layout_constraintBottom_toTopOf="@+id/btnDeny"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.safey.lungmonitoring.customviews.CustomButtonCircularStd
        android:id="@+id/btnDeny"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:background="@drawable/ic_button_white_round"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="@+id/btnAllow"
        app:layout_constraintEnd_toStartOf="@+id/btnAllow"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent" />

    <com.safey.lungmonitoring.customviews.CustomButtonCircularStd
        android:id="@+id/btnAllow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:background="@drawable/ic_btn_pink_round"
        android:text="@string/btn_txt_confirm"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnDeny" />
</androidx.constraintlayout.widget.ConstraintLayout>