<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_8sdp">

    <com.safey.lungmonitoring.customviews.CustomTextViewCircularStd
        android:id="@+id/lblMeasurement"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:gravity="top"
        android:text="@string/measurement"
        android:alpha="0.5"
        android:theme="@style/label_11ssp"
        app:layout_constraintEnd_toStartOf="@+id/lblMeasureValue"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.safey.lungmonitoring.customviews.CustomTextViewCircularStd
        android:id="@+id/lblMeasureValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:gravity="center_horizontal|top"
        android:text=""

        android:theme="@style/label_11ssp"
        app:layout_constraintEnd_toStartOf="@+id/lblPercentage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@+id/lblMeasurement"
        app:layout_constraintTop_toTopOf="parent" />

    <com.safey.lungmonitoring.customviews.CustomTextViewCircularStd
        android:id="@+id/lblPercentage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""

        android:alpha="0.5"
        android:theme="@style/label_11ssp"
        app:layout_constraintEnd_toStartOf="@+id/lblLNN"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@+id/lblMeasureValue"
        app:layout_constraintTop_toTopOf="parent" />

    <com.safey.lungmonitoring.customviews.CustomTextViewCircularStd
        android:id="@+id/lblLNN"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:gravity="center"
        android:text="@string/lnn"

        android:theme="@style/label_11ssp"
        app:layout_constraintEnd_toStartOf="@+id/lblZscore"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@+id/lblPercentage"
        app:layout_constraintTop_toTopOf="parent" />

    <com.safey.lungmonitoring.customviews.CustomTextViewCircularStd
        android:id="@+id/lblZscore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:gravity="center"
        android:text="@string/z_score"
        android:theme="@style/label_11ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@+id/lblLNN"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#EEF0FF"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblMeasurement" />

</androidx.constraintlayout.widget.ConstraintLayout>